findbugs:DM_BOOLEAN_CTOR, findbugs:DM_NUMBER_CTOR - Performance - Method invokes inefficient constructor; use static valueOf instead